# automation-evaluation

./: .gitignore  README.md  conftest.py  pyproject.toml
tests/: test_cart_functionality.py  test_repo_accessibility.py
tests/pages/: __init__.py  exceptions.py  shopping_cart_page.py
